Fixed logo subtitle left alignment

--- a/css/site.css
+++ b/css/site.css
@@ -143,6 +143,7 @@ nav.top-pane li.icon img.black {
   font-size: 259%;
   font-weight: 200;
   letter-spacing: 0.03em;
+  margin-left: 230px;
 }
 #top-pane header p {
   font-family: "adelle";
